--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,14 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
+			<!-- nav unncessesary for now
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
 	    		</ul>
 			</nav>
+			-->
 			<div class="container">
 			
 			{{ content }}
