--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<link href='https://fonts.googleapis.com/css?family=Capriola' rel='stylesheet' type='text/css'>
+			<link href='https://fonts.googleapis.com/css?family=Capriola|Corben' rel='stylesheet' type='text/css'>
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
