--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 body {
     margin: 60px auto;
     width: 70%;
+    font-family: 'Corben', 'Helvetica', 'Sans-Serif';
 }
 nav ul, footer ul {
-    font-family: 'Corben', cursive;
     padding: 0px;
     list-style: none;
     font-weight: bold;
